# service/api/unfollow-user.go
@@ -1,25 +1,0 @@
-package api
-
-import (
-	"net/http"
-
-	"github.com/julienschmidt/httprouter"
-)
-
-func (rt *_router) unfollowUser(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
-	username := rt.getUsername(ps)
-
-	myId, err := rt.get_myid_path(ps)
-	if err != nil {
-		rt.responsError(http.StatusBadRequest, err.Error(), w)
-		return
-	}
-
-	err = rt.db.UnfollowUser(myId, username)
-	if err != nil {
-		rt.responsError(http.StatusBadRequest, err.Error(), w)
-		return
-	}
-	str := "User unfollowed"
-	rt.responseJson(str, w)
-}
