# service/api/user.go
@@ -1,0 +1,75 @@
+package api
+
+import (
+	"encoding/json"
+	"net/http"
+
+	"github.com/Beatrice0399/WASAPhoto/service/api/reqcontext"
+	"github.com/julienschmidt/httprouter"
+)
+
+func (rt *_router) getMyProfile(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+	/*
+		myId, err := rt.getMyId(r)
+		if err != nil {
+			rt.responsError(http.StatusBadRequest, err.Error(), w)
+			return
+		}
+	*/
+	myid, err := rt.get_myid_path(ps)
+	if err != nil {
+		rt.responsError(http.StatusBadRequest, err.Error(), w)
+		return
+	}
+	profile, err := rt.db.GetMyProfile(myid)
+	if err != nil {
+		rt.responsError(http.StatusBadRequest, err.Error(), w)
+		return
+	}
+	rt.responseJson(profile, w)
+
+}
+
+func (rt *_router) setMyUsername(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+	var username string
+	err := json.NewDecoder(r.Body).Decode(&username)
+	if err != nil {
+		rt.responsError(http.StatusBadRequest, err.Error(), w)
+		return
+	}
+	myId, err := rt.get_myid_path(ps)
+	if err != nil {
+		rt.responsError(http.StatusBadRequest, err.Error(), w)
+		return
+	}
+	name, err := rt.db.SetMyUsername(myId, username)
+
+	if err != nil {
+		rt.responsError(http.StatusBadRequest, err.Error(), w)
+		return
+	}
+	rt.responseJson(name, w)
+}
+
+func (rt *_router) getUserProfile(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+	username := rt.getUsername(ps)
+
+	uid, err := rt.db.GetId(username)
+	if err != nil {
+		rt.responsError(http.StatusBadRequest, err.Error(), w)
+		return
+	}
+
+	myId, err := rt.get_myid_path(ps)
+	if err != nil {
+		rt.responsError(http.StatusBadRequest, err.Error(), w)
+		return
+	}
+	profile, err := rt.db.GetUserProfile(uid, myId)
+	if err != nil {
+		rt.responsError(http.StatusBadRequest, err.Error(), w)
+		return
+	}
+	rt.responseJson(profile, w)
+
+}
